[tool.poetry]
name = "pydhn"
version = "0.1.3"
description = "A library for the simulation of district heating networks."
authors = [
	"Roberto Boghetti <roberto.boghetti@idiap.ch>",
	"Giuseppe Peronato <giuseppe.peronato@idiap.ch>"
	]
readme = "README.md"
license = "AGPL v3"
homepage = "https://www.github.com/idiap/pydhn"
repository = "https://www.github.com/idiap/pydhn"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.2"
scipy = "^1.11.2"
networkx = ">=2.6,<3"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
geopandas= "^0.13.2"
plotly = "^5.16.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.0"
openpyxl = "^3.1.2"
sphinx = "^7.3.7"
sphinx_rtd_theme = "^2.0.0"
pre-commit = "^3.0.0"

[tool.isort]
skip = ["__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
